--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="https://www.linkedin.com/in/jose-gonzalez-0b4961183/">Linkedin </a><br><a href="{{ site.github.owner_url }}">GitHub </a><br><a href="mailto:joselgonzalez271@gmail.com">Contact Me </a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/jose-gonzalez-0b4961183/">Linkedin </a><br><a href="{{ site.github.owner_url }}">GitHub </a><br><a href="/assets/img/resume_joseluisgonzalez.pdf">Resume </a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
@@ -44,9 +44,6 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
