--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="https://www.linkedin.com/in/jose-gonzalez-0b4961183/">Linkedin </a><br><a href="{{ site.github.owner_url }}">GitHub </a><br><a href="/assets/img/resume_joseluisgonzalez.pdf">Resume </a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/jose-gonzalez-0b4961183/">Linkedin </a><br><a href="{{ site.github.owner_url }}">GitHub </a><br><a href="https://drive.google.com/file/d/129dcbF1nt5FqOfJip0F9bHw2VAiGloMH/view">Resume </a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
